Opened 3 years ago

Closed 3 years ago

#10050 closed defect (fixed)

phm enc crash

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: unspecified Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

the same happens with out.pfm

(gdb) r -i 1.jpg -s 9999x19999 -y   out.phm
Starting program: ffmpeg_g -i 1.jpg -s 9999x19999 -y   out.phm
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
ffmpeg version N-109101-g822da7a317 Copyright (c) 2000-2022 the FFmpeg developers
  built with gcc 9 (Ubuntu 9.4.0-1ubuntu1~20.04.1)
  configuration: 
  libavutil      57. 42.100 / 57. 42.100
  libavcodec     59. 52.102 / 59. 52.102
  libavformat    59. 34.101 / 59. 34.101
  libavdevice    59.  8.101 / 59.  8.101
  libavfilter     8. 50.100 /  8. 50.100
  libswscale      6.  8.112 /  6.  8.112
  libswresample   4.  9.100 /  4.  9.100
[mjpeg @ 0x555557141cc0] EOI missing, emulating
Input #0, jpeg_pipe, from '1.jpg':
  Duration: N/A, bitrate: N/A
  Stream #0:0: Video: mjpeg (Baseline), yuvj420p(pc, bt470bg/unknown/unknown), 1x1, 25 fps, 25 tbr, 25 tbn
Stream mapping:
  Stream #0:0 -> #0:0 (mjpeg (native) -> phm (native))
Press [q] to stop, [?] for help
[New Thread 0x7ffff6bdd700 (LWP 30807)]
[Thread 0x7ffff6bdd700 (LWP 30807) exited]
[New Thread 0x7ffff63dc700 (LWP 30808)]
[New Thread 0x7ffff5bdb700 (LWP 30809)]
[New Thread 0x7ffff53da700 (LWP 30810)]
[New Thread 0x7ffff4bd9700 (LWP 30811)]
[New Thread 0x7fffeffff700 (LWP 30812)]
[New Thread 0x7fffef7fe700 (LWP 30813)]
[New Thread 0x7fffeeffd700 (LWP 30814)]
[New Thread 0x7fffee7fc700 (LWP 30815)]
[New Thread 0x7fffedffb700 (LWP 30816)]
[New Thread 0x7fffed7fa700 (LWP 30817)]
[New Thread 0x7fffecff9700 (LWP 30818)]
[New Thread 0x7fffec7f8700 (LWP 30819)]
[New Thread 0x7fffebff7700 (LWP 30820)]
[New Thread 0x7fffeb7f6700 (LWP 30821)]
[New Thread 0x7fffeaff5700 (LWP 30822)]
[New Thread 0x7fffea7f4700 (LWP 30823)]
[swscaler @ 0x555557161d80] [swscaler @ 0x55555716fa00] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x5555574479c0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x555557728e80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x555557a0a340] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x555557ceb800] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x555557fcccc0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x5555582ae180] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x55555858f640] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x555557161d80] [swscaler @ 0x555558870b00] deprecated pixel format used, make sure you did set range correctly
[Thread 0x7fffea7f4700 (LWP 30823) exited]
[Thread 0x7fffeaff5700 (LWP 30822) exited]
[New Thread 0x7fffea7f4700 (LWP 30824)]
[Thread 0x7fffeb7f6700 (LWP 30821) exited]
[Thread 0x7fffebff7700 (LWP 30820) exited]
[Thread 0x7fffec7f8700 (LWP 30819) exited]
[Thread 0x7fffecff9700 (LWP 30818) exited]
[Thread 0x7fffed7fa700 (LWP 30817) exited]
[Thread 0x7fffedffb700 (LWP 30816) exited]
[New Thread 0x7fffeaff5700 (LWP 30825)]
[New Thread 0x7fffeb7f6700 (LWP 30826)]
[New Thread 0x7fffebff7700 (LWP 30827)]
[New Thread 0x7fffedffb700 (LWP 30828)]
[New Thread 0x7fffed7fa700 (LWP 30829)]
[New Thread 0x7fffecff9700 (LWP 30830)]
[New Thread 0x7fffec7f8700 (LWP 30831)]
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555717d000] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555746d300] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555774e7c0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557a2fc80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557d11140] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557ff2600] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555582d3ac0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555585b4f80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555558896440] deprecated pixel format used, make sure you did set range correctly
[Thread 0x7fffec7f8700 (LWP 30831) exited]
[New Thread 0x7fffec7f8700 (LWP 30832)]
[Thread 0x7fffecff9700 (LWP 30830) exited]
[Thread 0x7fffed7fa700 (LWP 30829) exited]
[Thread 0x7fffedffb700 (LWP 30828) exited]
[Thread 0x7fffebff7700 (LWP 30827) exited]
[Thread 0x7fffeb7f6700 (LWP 30826) exited]
[Thread 0x7fffeaff5700 (LWP 30825) exited]
[Thread 0x7fffea7f4700 (LWP 30824) exited]
[New Thread 0x7fffecff9700 (LWP 30833)]
[New Thread 0x7fffed7fa700 (LWP 30834)]
[New Thread 0x7fffedffb700 (LWP 30835)]
[New Thread 0x7fffebff7700 (LWP 30836)]
[New Thread 0x7fffeb7f6700 (LWP 30837)]
[New Thread 0x7fffeaff5700 (LWP 30838)]
[New Thread 0x7fffea7f4700 (LWP 30839)]
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555717d000] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555746d300] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555774e7c0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557a2fc80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557d11140] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557ff2600] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555582d3ac0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555585b4f80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555558896440] deprecated pixel format used, make sure you did set range correctly
[Thread 0x7fffea7f4700 (LWP 30839) exited]
[Thread 0x7fffeaff5700 (LWP 30838) exited]
[Thread 0x7fffeb7f6700 (LWP 30837) exited]
[Thread 0x7fffebff7700 (LWP 30836) exited]
[Thread 0x7fffedffb700 (LWP 30835) exited]
[Thread 0x7fffed7fa700 (LWP 30834) exited]
[Thread 0x7fffecff9700 (LWP 30833) exited]
[Thread 0x7fffec7f8700 (LWP 30832) exited]
[New Thread 0x7fffea7f4700 (LWP 30840)]
[New Thread 0x7fffeaff5700 (LWP 30841)]
[New Thread 0x7fffeb7f6700 (LWP 30842)]
[New Thread 0x7fffebff7700 (LWP 30843)]
[New Thread 0x7fffedffb700 (LWP 30844)]
[New Thread 0x7fffed7fa700 (LWP 30845)]
[New Thread 0x7fffecff9700 (LWP 30846)]
[New Thread 0x7fffec7f8700 (LWP 30847)]
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555717d000] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555746d300] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x55555774e7c0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557a2fc80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557d11140] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555557ff2600] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555582d3ac0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x5555585b4f80] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x55555716fa00] [swscaler @ 0x555558896440] deprecated pixel format used, make sure you did set range correctly
Output #0, image2, to 'out.phm':
  Metadata:
    encoder         : Lavf59.34.101
  Stream #0:0: Video: phm, gbrpf32le(pc, gbr/unknown/unknown, progressive), 9999x19999, q=2-31, 200 kb/s, 25 fps, 25 tbn
    Metadata:
      encoder         : Lavc59.52.102 phm
[New Thread 0x7fff5ab93700 (LWP 30848)]
--Type <RET> for more, q to quit, c to continue without paging--

Thread 1 "ffmpeg_g" received signal SIGSEGV, Segmentation fault.
0x0000555555e366d9 in pnm_encode_frame (avctx=0x555557151980, 
    pkt=0x555557148700, p=0x5555571487c0, got_packet=0x7fffffffd954)
    at ./libavutil/float2half.h:52
52	    return h;
(gdb) bt
#0  0x0000555555e366d9 in pnm_encode_frame (avctx=0x555557151980, 
    pkt=0x555557148700, p=0x5555571487c0, got_packet=0x7fffffffd954)
    at ./libavutil/float2half.h:52
#1  0x0000555555c096b2 in ff_encode_encode_cb (
    avctx=avctx@entry=0x555557151980, avpkt=avpkt@entry=0x555557148700, 
    frame=frame@entry=0x5555571487c0, 
    got_packet=got_packet@entry=0x7fffffffd954) at libavcodec/encode.c:199
#2  0x0000555555c09979 in encode_simple_internal (avpkt=0x555557148700, 
    avctx=0x555557151980) at libavcodec/encode.c:277
#3  encode_simple_receive_packet (avpkt=<optimized out>, avctx=<optimized out>)
    at libavcodec/encode.c:295
#4  encode_receive_packet_internal (avctx=avctx@entry=0x555557151980, 
    avpkt=0x555557148700) at libavcodec/encode.c:329
#5  0x0000555555c09c34 in avcodec_send_frame (avctx=0x555557151980, 
    frame=0x555557152400) at libavcodec/encode.c:471
#6  0x0000555555708e61 in encode_frame (of=0x555557148f40, ost=0x5555571516c0, 
    frame=0x555557152400) at fftools/ffmpeg.c:848
#7  0x000055555570f046 in do_video_out (of=0x555557148f40, ost=0x5555571516c0, 
    next_picture=0x555557152400) at fftools/ffmpeg.c:1264
#8  0x000055555570f798 in reap_filters (flush=0) at fftools/ffmpeg.c:1341
#9  0x000055555571217d in transcode_step () at fftools/ffmpeg.c:3868
#10 transcode () at fftools/ffmpeg.c:3905
#11 0x00005555556e9deb in main (argc=7, argv=0x7fffffffdf78)
    at fftools/ffmpeg.c:4052
==30874== Invalid write of size 2
==30874==    at 0x9EA6B3: pnm_encode_frame (pnmenc.c:172)
==30874==    by 0x7BD6B1: ff_encode_encode_cb (encode.c:199)
==30874==    by 0x7BD978: encode_simple_internal (encode.c:277)
==30874==    by 0x7BD978: encode_simple_receive_packet (encode.c:295)
==30874==    by 0x7BD978: encode_receive_packet_internal (encode.c:329)
==30874==    by 0x7BDC33: avcodec_send_frame (encode.c:471)
==30874==    by 0x2BCE60: encode_frame (ffmpeg.c:848)
==30874==    by 0x2C3045: do_video_out (ffmpeg.c:1264)
==30874==    by 0x2C3797: reap_filters (ffmpeg.c:1341)
==30874==    by 0x2C617C: transcode_step (ffmpeg.c:3868)
==30874==    by 0x2C617C: transcode (ffmpeg.c:3905)
==30874==    by 0x29DDEA: main (ffmpeg.c:4052)

Attachments (1)

1.jpg (1.4 KB ) - added by ami_stuff 3 years ago.

Download all attachments as: .zip

Change History (2)

by ami_stuff, 3 years ago

Attachment: 1.jpg added

comment:1 by mkver, 3 years ago

Component: undeterminedavcodec
Priority: normalimportant
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.